# mindbox-shapetools

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
shapetools/: __init__.py  shapetools.py
tests/: test_circle.py  test_triangle.py
