[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shapetools"
requires-python = ">=3.9"
authors = [{ name = "Ivan Peshekhonov", email = "peshekhonov.ip@gmail.com" }]
description = "Library to evaluate shape properties"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["typing-extensions == 4.12.2"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "shapetools.__version__" }
readme = { file = ["README.md"] }
